Add psychology page

--- a/docs/sciences/psychology.mdx
+++ b/docs/sciences/psychology.mdx
@@ -12,8 +12,78 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Psychology
 
+Psychology (<HisyeoWord is='bêûdo'/> <HisyeoWord is='dûuncît'/>) is the study of
+the <HisyeoWord is='dûuncît'/> (mind), <HisyeoWord is='kon'/> <HisyeoWord is='gonîso'/> (thinking),
+<HisyeoWord is='kon'/> <HisyeoWord is='oncêmon'/> (feeling), and <HisyeoWord is='zusbot'/> (emotions).
+In Hîsyêô, mental health is viewed through the lens of the [Shattering](../religion/shattering)—
+understanding how the mind fragments under trauma and how it can be re-woven.
 
+## Core Concepts
 
+The Hîsyêô model of the psyche distinguishes between the rational mind, the
+emotional heart, and the fleeting thought.
+
+| English       | Hîsyêô                                  | Literal Meaning               |
+|---------------|-----------------------------------------|-------------------------------|
+| Mind          | <HisyeoWord is='dûuncît'/>              |                               |
+| Reason        | <HisyeoWord is='môtîfô'/>               |                               |
+| Emotion       | <HisyeoWord is='zusbot'/>               |                               |
+| Thought       | <HisyeoWord is='gonîso'/>               | Idea / Impulse                |
+| Feeling       | <HisyeoWord is='oncêmon'/>              | Sensation / Feeling           |
+| Consciousness | <HisyeoWord is='kôxentê'/>              |                               |
+| Personality   | <HisyeoText>zomo yê dî umo</HisyeoText> | Collection of personal traits |
+
+<HisyeoTabs>
+    <p>dûuncît li bobôun,  li cingî.&emsp;<em>The mind is the system, the heart is the energy.</em></p>
+</HisyeoTabs>
+
+## Mental Health
+
+Mental illness (<HisyeoWord is='sobûnî'/> <HisyeoWord is='dûuncît'/>) is not
+seen as a defect, but as a reaction to the Shards (structures of domination) or
+the Reflected Suffering (lingering trauma) of the world.
+
+**Trauma:** <HisyeoText>gûlû zusbot&nbsp;<small>(Emotional wound)</small></HisyeoText>
+
+**Anxiety:** <HisyeoText>cînzon cênbô&nbsp;<small>(Big worry)</small></HisyeoText>
+
+**Depression:** <HisyeoText>kûyô yinsûk yê wokût côt&nbsp;<small>(Serious sadness of a long time)</small></HisyeoText>
+
+**Psychiatry:** <HisyeoText>noûku cîgîlsu dûuncît&nbsp;<small>(Mental treatment science)</small></HisyeoText>
+
+## Reflected Suffering aka "Echoes"
+
+<HisyeoWord is='tônkô'/> <HisyeoWord is='tîkêl'/> (literally "reflected
+suffering") is the Hîsyêô term for PTSD or recurring trauma responses. It is the
+sound of the Shattering still vibrating in the mind, reflecting off the walls of
+memory.
+
+Conversely, the act of processing this trauma—looking at it in the mirror—is
+called <HisyeoWord is='kon'/> <HisyeoWord is='tîkêl'/> <HisyeoWord is='tônkô'/> (Pain Reflection).
+
+<HisyeoTabs>
+    <p>noyo tenkîn tônkô tîkêl yê gûexo.&emsp;<em>I hear the reflected suffering of the war.</em></p>
+</HisyeoTabs>
+
+## Therapy & Practice
+
+Psychology in Hîsyêô is a practical discipline of môtsilê (weaving) and unbinding.
+
+**Therapy:** <HisyeoText>cîgîlsu kon kôto&nbsp;<small>(Talking treatment)</small></HisyeoText>
+
+**Meditation:** <HisyeoText>tûu côt yê dûuncît homûs&nbsp;<small>(Long action of a quiet mind)</small></HisyeoText>
+
+**Reflection:** <HisyeoText>kon tîkêl dûuncît&nbsp;<small>(Mental reflection)</small></HisyeoText>
+
+## The Mirror Ritual
+
+A common practice for self-integration, associated with [Xôcibîlî](../religion/gods/xôcibîlî).
+
+1. <HisyeoWord is='dêko'/>: Look at yourself (Observe).
+
+2. <HisyeoWord is='kôto'/>: Speak the truth (Admission).
+
+3. <HisyeoWord is='wofok'/>: Accept the self (Agreement).
 
 <HisyeoTooltip />
 
