Add medicine page

--- a/docs/sciences/medicine.mdx
+++ b/docs/sciences/medicine.mdx
@@ -12,8 +12,93 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Medicine
 
+Medicine (<HisyeoWord is='bêûdo'/> <HisyeoWord is='cîgîlsu'/>) is the study of cîgîlsu (<HisyeoWord is='sohoû'/>) and the care of the solîlo (<HisyeoWord is='body'/>). In Hîsyêô, medicine is a practical discipline of maintenance and repair, guided by [Bostet](../religion/gods/bostet) (Care) and [Unonsî](../religion/gods/unonsî) (Technology).
 
+## Core Concepts
 
+Health is viewed as a state of balance and function within the physical system.
+
+| English            | Hîsyêô                                              | Literal Meaning       |
+|--------------------|-----------------------------------------------------|-----------------------|
+| Medicine (Field)   | <HisyeoWord is='bêûdo'/> <HisyeoWord is='cîgîlsu'/> | Study of treatments   |
+| Health             | <HisyeoWord is='sohoû'/>                            | Healthiness           |
+| Body               | <HisyeoWord is='solîlo'/>                           | Body / Corporeal form |
+| Disease / Sickness | <HisyeoWord is='sobûnî'/>                           | Sickness / Illness    |
+| Pain               | <HisyeoWord is='tônkô'/>                            | Pain / Suffering      |
+| Treatment          | <HisyeoWord is='cîgîlsu'/>                          |                       |
+| Recovery           | <HisyeoWord is='xîûfû'/>                            | Repair / Restoration  |
+
+## Philosophy of Care
+
+Hîsyêô rejects the concept of "magical healing." The body is a complex biological machine that requires active maintenance.
+
+<HisyeoTabs>
+    <p>nûs kôs yôk mozîkô; nûs tûu kon xîûfû hokîkî.&emsp;<em>We do not make magic; we do real repair.</em></p>
+</HisyeoTabs>
+
+## Anatomy
+
+The geography of the body (<HisyeoWord is='solîlo'/>).
+
+| Part    | Hîsyêô                                           | Literal Meaning         |
+|---------|--------------------------------------------------|-------------------------|
+| Head    | <HisyeoWord is='wîk'/>                           |                         |
+| Brain   | <HisyeoWord is='dûuncît'/>                       |                         |
+| Heart   | <HisyeoWord is='lozîdô'/>                        |                         |
+| Liver   | <HisyeoWord is='ciwîndî'/>                       |                         |
+| Lungs   | <HisyeoText>kukwon yê kon wedo woyû</HisyeoText> | organ of air exchanging |
+| Stomach | <HisyeoText>kukwon ônî sîûfo</HisyeoText>        | digester organ          |
+| Blood   | <HisyeoText>luhû</HisyeoText>                    |                         |
+| Bone    | <HisyeoText>ôstî</HisyeoText>                    |                         |
+| Skin    | <HisyeoText>ocûo</HisyeoText>                    |                         |
+
+## Medical Practice
+
+The medical profession is dedicated to the diagnosis and repair of biological systems.
+
+**Doctor:** <HisyeoText>ônî cûdo cîgîlsu&emsp;<small>(The treatment giving one)</small></HisyeoText>
+
+**Nurse:** <HisyeoText>ônî yoldûn cîgîlsu&emsp;<small>(The treatment helping one)</small></HisyeoText>
+
+**Patient:** <HisyeoText>ônî sobûnî&emsp;<small>(The sick one)</small></HisyeoText>
+
+**Condition:** <HisyeoText>êtsô sobûnî&emsp;<small>(Sick state)</small></HisyeoText>
+
+**Diagnosis:** <HisyeoText>xe yosten sobûnî&emsp;<small>(To discover sickness)</small></HisyeoText>
+
+**Surgeon:** <HisyeoText>ônî xîûfû xofô&emsp;<small>(Guts repairer)</small></HisyeoText>
+
+## Pharmacology
+
+Medications are viewed as tools (<HisyeoWord is='yôn'/>) for the body.
+
+**Medicine (Drug):** <HisyeoText>kûsowî cîgîlsu&emsp;<small>(Treatment material)</small></HisyeoText>
+
+**Pill:** <HisyeoText>gundolê cîgîlsu cûtî&emsp;<small>(Small treatment ball)</small></HisyeoText>
+
+**Vaccine:** <HisyeoText>cîgîlsu ônî cûfo yê yoûtî sobûnî&emsp;<small>(Guardian treatment of some illnesses)</small></HisyeoText>
+
+**Poison:** <HisyeoWord is='nozî'/> (Toxin)
+
+<HisyeoTabs>
+    <p>kûsowî cîgîlsu cûdo yoldûn mût solîlo til xe xîûfû cizî.&emsp;<em>Medicine helps the body repair itself.</em></p>
+</HisyeoTabs>
+
+## Medical Specialties
+
+Just as the body has many parts, medicine has many paths of expertise.
+
+| Specialty   | Hîsyêô                                                      | Literal Meaning                    |
+|-------------|-------------------------------------------------------------|------------------------------------|
+| Cardiology  | <HisyeoText>bêûdo yê cîgîlsu lozîdô</HisyeoText>            | Study of heart treatment           |
+| Neurology   | <HisyeoText>bêûdo yê cîgîlsu yê kukwon dûuncît</HisyeoText> | Study of brain organ treatment     |
+| Dermatology | <HisyeoText>bêûdo yê cîgîlsu ocûo</HisyeoText>              | Study of skin treatment            |
+| Orthopedics | <HisyeoText>bêûdo yê cîgîlsu ôstî</HisyeoText>              | Study of bone treatment            |
+| Pediatrics  | <HisyeoText>bêûdo yê cîgîlsu mênyûu</HisyeoText>            | Study of children treatment        |
+| Geriatrics  | <HisyeoText>bêûdo yê cîgîlsu yê ônî nokdo</HisyeoText>      | Study of treatment of old ones     |
+| Psychiatry  | <HisyeoText>bêûdo yê cîgîlsu dûuncît</HisyeoText>           | Study of mental treatments         |
+| Pulmonology | <HisyeoText>bêûdo yê cîgîlsu yê kon wedo woyû</HisyeoText>  | Study of air exchanging treatments |
+| Surgery     | <HisyeoText>bêûdo yê kon xîûfû xofô</HisyeoText>            | Study of guts repairing            |
 
 <HisyeoTooltip />
 
