Fixes for medicine page

--- a/docs/sciences/medicine.mdx
+++ b/docs/sciences/medicine.mdx
@@ -12,7 +12,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Medicine
 
-Medicine (<HisyeoWord is='bêûdo'/> <HisyeoWord is='cîgîlsu'/>) is the study of cîgîlsu (<HisyeoWord is='sohoû'/>) and the care of the solîlo (<HisyeoWord is='body'/>). In Hîsyêô, medicine is a practical discipline of maintenance and repair, guided by [Bostet](../religion/gods/bostet) (Care) and [Unonsî](../religion/gods/unonsî) (Technology).
+Medicine (<HisyeoWord is='bêûdo'/> <HisyeoWord is='cîgîlsu'/>) is the study of cîgîlsu (<HisyeoWord is='sohoû'/>) and the care of the <HisyeoWord is='solîlo'/> (<HisyeoWord is='body'/>). In Hîsyêô, medicine is a practical discipline of maintenance and repair, guided by [Bostet](../religion/gods/bostet) (Care) and [Unonsî](../religion/gods/unonsî) (Technology).
 
 ## Core Concepts
 
@@ -20,7 +20,7 @@ Health is viewed as a state of balance and function within the physical system.
 
 | English            | Hîsyêô                                              | Literal Meaning       |
 |--------------------|-----------------------------------------------------|-----------------------|
-| Medicine (Field)   | <HisyeoWord is='bêûdo'/> <HisyeoWord is='cîgîlsu'/> | Study of treatments   |
+| Medicine (Field)   | <HisyeoWord is='bêûdo'/> <HisyeoWord is='yê'/> <HisyeoWord is='cîgîlsu'/> | Study of treatments   |
 | Health             | <HisyeoWord is='sohoû'/>                            | Healthiness           |
 | Body               | <HisyeoWord is='solîlo'/>                           | Body / Corporeal form |
 | Disease / Sickness | <HisyeoWord is='sobûnî'/>                           | Sickness / Illness    |
