sociology page fixes

--- a/docs/sciences/sociology.mdx
+++ b/docs/sciences/sociology.mdx
@@ -43,9 +43,9 @@ Hîsyêô sociology analyzes how individuals form the collective "Weave".
 
 ### The Community (The Fabric)
 
-**Neighbor:** <HisyeoText>ônî niwos yê ûnhilun</HisyeoText> (The residing ones of the surrounding)
+**Neighbor:** <HisyeoText>ônî niwos yê ûnhilun&emsp;<small>(The residing ones of the surrounding)</small></HisyeoText>
 
-**Stranger:** <HisyeoText>umo dês monodo</HisyeoText> (The unmet person)
+**Stranger:** <HisyeoText>umo dês monodo&emsp;<small>(The unmet person)</small></HisyeoText>
 
 **Friend:** <HisyeoWord is='sûtûô'/>
 
@@ -53,9 +53,9 @@ Hîsyêô sociology analyzes how individuals form the collective "Weave".
 
 Hîsyêô sociology views class stratification as a "Shard" of the First Law.
 
-**Class:** <HisyeoText>cêô umo</HisyeoText> (People rank)
+**Class:** <HisyeoText>cêô umo&emsp;<small>(People rank)</small></HisyeoText>
 
-**Elite:** <HisyeoText>cêô cên</HisyeoText> (High rank)
+**Elite:** <HisyeoText>cêô cên&emsp;<small>(High rank)</small></HisyeoText>
 
 **Worker:** <HisyeoWord is='kukwon'/>
 
@@ -67,23 +67,27 @@ Hîsyêô sociology views class stratification as a "Shard" of the First Law.
 
 How do groups interact and change?
 
-**Solidarity:** <HisyeoText>kotilmok yoldûn yê umo dîzel</HisyeoText> (Aid contributing of other people)
+**Solidarity:** <HisyeoText>kotilmok yoldûn yê umo dîzel&emsp;<small>(Aid contributing of other people)</small></HisyeoText>
 
 **Conflict:** <HisyeoWord is='gûexo'/>
 
-**Cooperation:** <HisyeoText>kotilmok xe til xokôn dîzel</HisyeoText> (Working each other/together)
+**Cooperation:** <HisyeoText>kotilmok xe til xokôn dîzel&emsp;<small>(Working each other/together)</small></HisyeoText>
 
-**Assimilation:** <HisyeoText>kon gomî yê dondun</HisyeoText> (Taking of culture) - Often viewed negatively as erasing multiplicity.
+**Assimilation:** <HisyeoText>kon gomî yê dondun&emsp;<small>(Taking of culture)</small></HisyeoText> 
 
-**Integration:** <HisyeoText>kon ûnîdû yê cizî losol</HisyeoText> (Joining of original self) - Viewed positively as adding threads to the Weave.
+Often viewed negatively as erasing multiplicity.
+
+**Integration:** <HisyeoText>kon ûnîdû yê cizî losol&emsp;<small>(Joining of original self)</small></HisyeoText> 
+
+Viewed positively as adding threads to the Weave.
 
 ## Cultural Theory
 
-**Values:** <HisyeoText>wîlûwo zomî</HisyeoText> (Social value/cost)
+**Values:** <HisyeoText>wîlûwo zomî&emsp;<small>(Social value/cost)</small></HisyeoText>
 
-**Taboo:** <HisyeoText>tûu dês cûlosun</HisyeoText> (Unallowed action)
+**Taboo:** <HisyeoText>tûu dês cûlosun&emsp;<small>(Unallowed action)</small></HisyeoText>
 
-**Ritual:** <HisyeoText>tûu kôdus</HisyeoText> (Sacred act)
+**Ritual:** <HisyeoText>tûu kôdus&emsp;<small>(Sacred act)</small></HisyeoText>
 
 ## Social Change
 
