Add some comparative/superlative details and explain using the collapser to force open determiner phrases.

--- a/docs/language/word_types/connectors.mdx
+++ b/docs/language/word_types/connectors.mdx
@@ -103,19 +103,60 @@ first.
 Used to establish a standard of comparison against the first item. This is
 essential for comparative sentences.
 
+:::warning English-ism Alert
+
+In English, we often say "She is taller than me," where "me" acts as a shortened
+version of "than I am." In Hîsyêô, <HisyeoWord is='en'/> connects phrases or
+clauses directly. It does not automatically replace the agent or subject. You
+should construct the comparison to be syntactically complete or clearly linked
+within the constituent.
+
+:::
+
 <HisyeoTabs>
-    <p>nîo li iwotê eswen en noyo.&emsp;<em>She is taller than me.</em></p>
+    <p>nîo en noyo li iwotê eswen.&emsp;<em>She (compared to) me is taller.</em></p>
+    <p>li iwotê eswen û nîo en noyo.&emsp;<em>Is taller she (compared to) me.</em></p>
+    <p>noyo bi eswen et fôlun xe mokon, en xe li conzodo.&emsp;<em>I more want to eat than to sleep.</em></p>
     <p>nîo li iwotê sumon en noyo.&emsp;<em>She is as tall as me.</em></p>
 </HisyeoTabs>
 
 ### As a Clause Connector
 
 Comparisons can occur between full clauses when comparing the degree of two
-different actions.
+different actions. This is often the clearest way to express complex
+comparisons.
 
 <HisyeoTabs>
-    <p>noyo fôlun mokon bi eswen en noyo fôlun xe li conzodo.&emsp;<em>I want to eat more than I want to sleep.</em></p>
+    <p>nîo li iwotê eswen en û nîo (li iwotê).&emsp;<em>She is taller than she (is tall).</em></p>
+    <p>noyo fôlun mokon bi eswen en û noyo fôlun xe li conzodo.&emsp;<em>I want to eat more than I want to sleep.</em></p>
 </HisyeoTabs>
+
+### Superlatives
+
+To express a superlative ("the most" or "the best"), you compare the subject to
+all others using <HisyeoWord is='môî'/>.
+
+<HisyeoTabs>
+<p>nîo li iwotê eswen en môî.&emsp;<em>She is the tallest (taller than all).</em></p>
+<p>ôfo li xôn eswen en môî.&emsp;<em>This is the best.</em></p>
+</HisyeoTabs>
+
+
+:::tip Super skip a 'tive
+
+Avoid the need for a comparative connector altogether by using <HisyeoWord is='môî'/> and
+<HisyeoWord is='xûnyu'/> as adjectives to mark superior and inferior superlative
+degrees directly, similar to how <HisyeoWord is='eswen'/> and <HisyeoWord is='mênûs'/> mark
+superior and inferior comparative degrees.
+
+<HisyeoTabs>
+    <p>nîo li iwotê môî.&emsp;<em>She is the tallest.</em></p>
+    <p>ôfo li xôn môî.&emsp;<em>This is the best.</em></p>
+    <p>noyo li conzodo xûnyu.&emsp;<em>I am the least sleepy.</em></p>
+</HisyeoTabs>
+
+:::
+
 
 ## Sequential (then/so/therefore)
 
