--- a/docs/language/word_types/modifiers.mdx
+++ b/docs/language/word_types/modifiers.mdx
@@ -58,7 +58,12 @@ immediately preceding head phrase.
 
 This particle is also useful for ending a determiner-led phrase before a nucleus
 can be added thus making the determiner phrase headless which means that the
-determiner is instead interpreted pronomically. 
+determiner is instead interpreted pronomically.
+
+<HisyeoTabs>
+    <p>🚨 noyo en nîmû bi mênûs lunsol hoî ûsên ôfo.&emsp;<em>I am less projectile-like than you this year.</em></p>
+    <p>noyo en nîmû bi mênûs et lunsol hoî ûsên ôfo.&emsp;<em>I threw less than you this year.</em></p>
+</HisyeoTabs>
 
 :::caution Verb Immunity
 
