Fix superlative examples

--- a/docs/language/word_types/connectors.mdx
+++ b/docs/language/word_types/connectors.mdx
@@ -137,8 +137,9 @@ To express a superlative ("the most" or "the best"), you compare the subject to
 all others using <HisyeoWord is='môî'/>.
 
 <HisyeoTabs>
-<p>nîo li iwotê eswen en môî.&emsp;<em>She is the tallest (taller than all).</em></p>
-<p>ôfo li xôn eswen en môî.&emsp;<em>This is the best.</em></p>
+<p>nîo en môî li iwotê eswen.&emsp;<em>She (compared to all) is the tallest.</em></p>
+<p>ôfo en môî li xôn eswen.&emsp;<em>This (compared to all) is the best.</em></p>
+<p>noyo en xûnyu li conzodo eswen.&emsp;<em>I (compared to noone) am the most sleepy.</em></p>
 </HisyeoTabs>
 
 
