--- a/docs/language/word_types/determiners.mdx
+++ b/docs/language/word_types/determiners.mdx
@@ -194,12 +194,12 @@ exact numerical quantity the noun actually is.
 
 <HisyeoTabs>
   <p><strong>total/all:</strong>&emsp;môî sûtûô noyo sûko kontol doî osyen.&emsp;<em>All my friends like classical music</em></p>
-  <p><strong>highest/most:</strong>&emsp;ôfo li numûno yê eswen sonkon en môî.&emsp;<em>This is the most important example.</em></p>
+  <p><strong>highest/most:</strong>&emsp;ôfo li numûno yê sonkon môî.&emsp;<em>This is the most important example.</em></p>
   <p><strong>high/many:</strong>&emsp;li êto tolîko bêsu yê xe côûfon.&emsp;<em>"There are many different ways to cook a meal."</em></p>
-  <p><strong>higher/more:</strong>&emsp;li eswen tolîko yê xe tûu ôfo, en fos noyo kôî tûek tô kut.&emsp;<em>"There are more ways to xe this than I can count."</em></p>
+  <p><strong>higher/more:</strong>&emsp;li eswen tolîko yê xe tûu ôfo, en û noyo kôî tûek tô kut.&emsp;<em>"There are more ways to xe this than I can count."</em></p>
   <p><strong>lower/fewer:</strong>&emsp;li mênûs umo hoî ôfo bi îbûdû.&emsp;<em>"There are less people here now."</em></p>
   <p><strong>low/some:</strong>&emsp;yoûtî umo sûko kon mûhoyon.&emsp;<em>"Some people like camping."</em></p>
-  <p><strong>lowest/least:</strong>&emsp;noyo bi tôlkî fuî zôtêstô til xe cifû mênûs cino yê niwos en môî.&emsp;<em>I can only afford to pay the least of the bills.</em></p>
+  <p><strong>lowest/least:</strong>&emsp;noyo bi tôlkî fuî zôtêstô til xe cifû mikdol xûnyu yê cino yê niwos.&emsp;<em>I can only afford to pay the least (none) of the bills.</em></p>
   <p><strong>zero/none:</strong>&emsp;xûnyu yê dûî umo li sumon.&emsp;<em>No two people are the same.</em></p>
 </HisyeoTabs>
 
