--- a/docs/language/word_types/pronouns.mdx
+++ b/docs/language/word_types/pronouns.mdx
@@ -190,7 +190,7 @@ These pronouns refer to unspecified people or things, or are used to ask questio
 | umo    | Indefinite (Animate)   | Someone, One, Person | umo kôto... (Someone said...)                       |
 | uyo    | Indefinite (Inanimate) | Something, Thing     | noyo buswen uyo. (I need something.)                |
 | zik    | Interrogative          | Which? / What?       | zik li yonlûs? (What is wrong?) |                   |
-| dîzel  | Alterity               | Other, Another, Else | nîo li xôn en dîzel. (It is better than the other.) |
+| dîzel  | Alterity               | Other, Another, Else | nîo li xôn en û dîzel (li xôn). (It is better than the other.) |
 
 
 ## Reciprocity
