--- a/docs/religion/practices.mdx
+++ b/docs/religion/practices.mdx
@@ -85,7 +85,7 @@ commitment to the collective's way of life.
 
 <HisyeoTabs>
     <p>noyo li totsi hoî ôfo hoî lono ôfo misli &emsp;<em>I stand here today, a sovereign self, to join my thread to this weave.</em></p>
-    <p>kôs buswêlin yê zûngô noyo mût wêloi yê ôtsôtot Îfêstôs: xe kôson bi eswen en xe yôn ûn xe golun tûu yê dîzel.&emsp;<em>I pledge my hands to the work of Îfêstôs, to build more than I consume and to honor the labor of others.</em></p>
+    <p>kôs buswêlin yê zûngô noyo mût wêloi yê ôtsôtot Îfêstôs: xe kôson bi eswen, en xe yôn ûn xe golun tûu yê dîzel.&emsp;<em>I pledge my hands to the work of Îfêstôs, to build more than I consume and to honor the labor of others.</em></p>
     <p>kôs buswêlin yê dûuncît noyo mût sôlû yê ôtsôtot Suluswutî; xe kôntêsto îmon wodîno ûn xe yosten hokîkî hoî fos ni li dês lohot.&emsp;<em>I pledge my mind to the questions of Suluswutî, to challenge dogma and to seek truth, even when it is uncomfortable.</em></p>
     <p>kôs buswêlin yê lozîdô noyo mût tût yê ôtsôtot Bostet; xe cûdo yoldûn bi fôlnî ûn xe li boxô mefûs til ulyô xe buswen.&emsp;<em>I pledge my heart to the warmth of Bostet, to offer care freely and to be a safe harbor for those in need.</em></p>
     <p>kôs buswêlin yê ôîtun noyo mût wutun yê ôtsôtot Tîengûun; xe tenkîn bi golun ûn xe kôto bi hokîkî til xôn yê mûlû.&emsp;<em>I pledge my voice to the circle of Tîengûun, to listen with respect and to speak with honesty for the good of the whole.</em></p>
