--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -68,7 +68,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>ônî mûhoyon onô sityo sî hoî ûnhilun yê môtô onô.&emsp;<em>The campers sat around the fire.</em></p>
 <p>umo wohî xonluk cûtî xe ofek mocko xonluk, sityo sî hoî fêlkonô noyo.&emsp;<em>A little girl with a kitten sat near me.</em></p>
 <p>mênyûu onô motsi sî hoî zinkon til motûo moskûl nîo.&emsp;<em>The child waited at the door for her father.</em></p>
-<p>hoî lono xobêk û umo wohî xonluk yê nokdo môî en ozûul yê sinsî onô nocîdo sî mocko xonluk nîo.&emsp;<em>Yesterday the oldest girl in the village lost her kitten.</em></p>
+<p>hoî lono xobêk û umo wohî xonluk yê nokdo môî yê ozûul yê sinsî onô nocîdo sî mocko xonluk nîo.&emsp;<em>Yesterday the oldest girl in the village lost her kitten.</em></p>
 <p>lôzîc sî nîmû hoî sinsî ôfo ko.&emsp;<em>Were you born in this village?</em></p>
 <p>siskin moskûl nîmû kôî li cifulo bi xôn ko.&emsp;<em>Can your brother dance well?</em></p>
 <p>umo moskûl onô li sî cok ko.&emsp;<em>Did the man leave?</em></p>
@@ -167,7 +167,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>oûtô xîmu li nô bi cok misli tîmîok xîkô.&emsp;<em>The boat sails away, like a bird on the wing.</em></p>
 <p>nîo dêko sî bi êto dîyondê hoî môî ûnhilun lêkin dêko yôk uyo.&emsp;<em>They looked cautiously about, but saw nothing.</em></p>
 <p>niwos cûtî fuî sî niswî kûncîen xe li kûncîen kon sityo li kûncîen kon conzodo li kûncîen kon côûfon yê cûtî êto.&emsp;<em>The little house had three rooms, a sitting room, a bedroom, and a tiny kitchen.</em></p>
-<p>nûs monodo sî sinsî cûtî yê siskin moskûl yê motûo noyo et xe li sinsî cûtî yê cênbô môî en nucoto.&emsp;<em>We visited my uncle's village, the largest village in the world.</em></p>
+<p>nûs monodo sî sinsî cûtî yê siskin moskûl yê motûo noyo et xe li sinsî cûtî yê cênbô môî yê nucoto.&emsp;<em>We visited my uncle's village, the largest village in the world.</em></p>
 <p>nûs bêûdo uyo nêôs hoî xokôn lono.&emsp;<em>We learn something new each day.</em></p>
 <p>socok gubuyo onô hoî tîû êfun yê hêlxun eswen hôn wêxôn ôfo.&emsp;<em>The market begins five minutes earlier this week.</em></p>
 <p>nîmû yosten sî odigon cênbô yê mônbili ko.&emsp;<em>Did you find the distance too great?</em></p>
@@ -218,11 +218,11 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>kûu ogolol kûdu onô bînê noyo kôî li nô ogolol ôntôn wîk noyo.&emsp;<em>Hold the horse while I run and get my cap.</em></p>
 <p>noyo yosten sî wutun zîxîtû onô fos noyo nocîdo.&emsp;<em>I have found the ring I lost.</em></p>
 <p>kûu kontol ûn noyo ke kontol bi ôîtun.&emsp;<em>Play and I will sing.</em></p>
-<p>ulyô li kîso yê yoûmok môî et onô en fos noyo hoî xokôn wokût tenkîn sî.&emsp;<em>That is the funniest story I ever heard.</em></p>
-<p>nîo wohî li iwotê eswen en siskin moskûl nîo.&emsp;<em>She is taller than her brother.</em></p>
-<p>nîo li yôk colot eswen en nûs.&emsp;<em>They are no wiser than we.</em></p>
+<p>ulyô li kîso yê yoûmok eswen et onô en fos noyo hoî xokôn wokût tenkîn sî.&emsp;<em>That is the funniest story I ever heard.</em></p>
+<p>nîo wohî en siskin moskûl nîo li iwotê eswen.&emsp;<em>She is taller than her brother.</em></p>
+<p>nîo li yôk colot eswen en û nûs.&emsp;<em>They are no wiser than we.</em></p>
 <p>kûon tuluti bi fîkî eswen en tenkîn.&emsp;<em>Light travels faster than sound.</em></p>
-<p>nûs fuî wokût eswen en nîo.&emsp;<em>We have more time than they.</em></p>
+<p>nûs fuî wokût eswen en û nîo.&emsp;<em>We have more time than they.</em></p>
 <p>nîo fuî sûtûô eswen en umo xe dên nîo.&emsp;<em>She has more friends than enemies.</em></p>
 <p>nîo fuî munî yê cûtî êto ûn ofek hûnsûon nîo ûn tîû mênyûu niwos boxô sêl cûtî yê môkôfo nomû ûn îbûwê.&emsp;<em>He was very poor, and with his wife and five children lived in a little low cabin of logs and stones.</em></p>
 <p>hoî fos woyû ûslêk sî, ônî tuluti onô ôlê ôntôn lîbû ûnhilun sî nîo bi fêlkonô eswen.&emsp;<em>When the wind blew, the traveler wrapped his mantle more closely around him.</em></p>
