add descriptions to all docs frontmatter

--- a/docs/community.mdx
+++ b/docs/community.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 7
+description: Join the Hîsyêô community! Learn about our values, where to find us on Reddit, Discord, and Matrix, and how to contribute to the language.
 ---
 
 import Tabs from '@theme/Tabs';
