--- a/docs/language/phonology.mdx
+++ b/docs/language/phonology.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 1
+description: A detailed guide to Hîsyêô phonology, covering consonants, vowels, syllable structure, prosody, and word construction rules.
 ---
 
 import Tabs from '@theme/Tabs';
