--- a/docs/language/spatial_relations.mdx
+++ b/docs/language/spatial_relations.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 4
+description: Master spatial relations in Hîsyêô using radial prepositions for space and time, and the locative nucleus construction for relative positions.
 ---
 
 import Tabs from '@theme/Tabs';
