--- a/docs/language/word_types/connectors.mdx
+++ b/docs/language/word_types/connectors.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 6
+description: Learn how to join thoughts, phrases, and clauses in Hîsyêô using connectors like 'ûn' (and), 'yodo' (or), and 'lêkin' (but).
 ---
 
 import Tabs from '@theme/Tabs';
