--- a/docs/language/word_types/determiners.mdx
+++ b/docs/language/word_types/determiners.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 4
+description: Explore Hîsyêô determiners, including numbers, quantities, and relative determiners, and how they define the reference type of a noun.
 ---
 
 import Tabs from '@theme/Tabs';
