--- a/docs/language/word_types/enders.mdx
+++ b/docs/language/word_types/enders.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 7
+description: Discover the role of Enders (sentence-final particles) in Hîsyêô for expressing mood, emotion, and intent, such as politeness or surprise.
 ---
 
 import Tabs from '@theme/Tabs';
