--- a/docs/language/word_types/modifiers.mdx
+++ b/docs/language/word_types/modifiers.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 3
+description: Understand how modifiers function in Hîsyêô, including the use of prepositions, converting other word types, and forming relative clauses.
 ---
 
 import Tabs from '@theme/Tabs';
