--- a/docs/language/word_types/nouns.mdx
+++ b/docs/language/word_types/nouns.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 1
+description: A comprehensive guide to Hîsyêô nouns, detailing their roles through prepositions, genitive relationships, and how to create noun phrases from verbs and modifiers.
 ---
 
 import Tabs from '@theme/Tabs';
