--- a/docs/language/word_types/verbs.mdx
+++ b/docs/language/word_types/verbs.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 2
+description: Master Hîsyêô verbs, covering transitivity, mood markers (realis/irrealis), tense, and verb modifiers for negation, causation, and perfection.
 ---
 
 import Tabs from '@theme/Tabs';
