--- a/docs/lessons/food-and-drink.mdx
+++ b/docs/lessons/food-and-drink.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 8
+description: Learn the vocabulary of food and drink in Hîsyêô, from basic actions and place settings to describing flavors and ordering in a restaurant.
 ---
 
 import Tabs from '@theme/Tabs';
