--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 3
+description: Master greetings and salutations in Hîsyêô. Learn how to introduce yourself, say hello, invite others, and respond to invitations.
 ---
 
 import Tabs from '@theme/Tabs';
