--- a/docs/lessons/occupation-arrangements.mdx
+++ b/docs/lessons/occupation-arrangements.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 6
+description: Discuss occupations and arrangements in Hîsyêô. Learn vocabulary for various professions and how to schedule meetings.
 ---
 
 import Tabs from '@theme/Tabs';
