--- a/docs/lessons/outdoors-sports-hobbies.mdx
+++ b/docs/lessons/outdoors-sports-hobbies.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 12
+description: Explore vocabulary for the outdoors, sports, and hobbies in Hîsyêô, from hiking and camping to team sports and creative pastimes.
 ---
 
 import Tabs from '@theme/Tabs';
