--- a/docs/lessons/shopping-for-clothes.mdx
+++ b/docs/lessons/shopping-for-clothes.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 8
+description: Learn to shop for clothes in Hîsyêô. Covers commerce vocabulary, clothing items, describing fit, and market interactions.
 ---
 
 import Tabs from '@theme/Tabs';
