--- a/docs/lessons/small-talk.mdx
+++ b/docs/lessons/small-talk.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 4
+description: Engage in small talk in Hîsyêô. Learn phrases for checking in, discussing health, family, weather, and expressing condolences.
 ---
 
 import Tabs from '@theme/Tabs';
