--- a/docs/religion/first-law.mdx
+++ b/docs/religion/first-law.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 2
+description: Understand the concept of the First Law in Hîsyêô mythology—the primordial force of static order and the source of the Shards of tyranny.
 ---
 
 import Tabs from '@theme/Tabs';
