--- a/docs/religion/gods/bostet.mdx
+++ b/docs/religion/gods/bostet.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 6
+description: Meet Bostet, the Hîsyêô god of Empathy, Care, and Family. Learn about their beliefs, appearance, and role in healthcare and grieving.
 ---
 
 import Tabs from '@theme/Tabs';
