--- a/docs/religion/gods/dimîtu.mdx
+++ b/docs/religion/gods/dimîtu.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 5
+description: Meet Dimîtu, the Hîsyêô god of Nature and Cycles. Learn about their beliefs regarding symbiosis, decay, and sustainable land use.
 ---
 
 import Tabs from '@theme/Tabs';
