--- a/docs/religion/gods/tîêngûun.mdx
+++ b/docs/religion/gods/tîêngûun.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 1
+description: Meet Tîengûun, the Hîsyêô god of Society and Consensus. Learn about participatory planning, solidarity, and the visible hand of cooperation.
 ---
 
 import Tabs from '@theme/Tabs';
