--- a/docs/religion/great-weave.mdx
+++ b/docs/religion/great-weave.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 4
+description: Discover the Great Weave, the Hîsyêô concept of the afterlife and spiritual reality where individual souls are unified without losing their unique threads.
 ---
 
 import Tabs from '@theme/Tabs';
