--- a/docs/religion/why.mdx
+++ b/docs/religion/why.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 0
+description: Understand the rationale behind the Hîsyêô religion. How a shared metaphysics functions as a 'technology of culture' to foster anarchist values.
 ---
 
 import Tabs from '@theme/Tabs';
