--- a/docs/sciences/history.mdx
+++ b/docs/sciences/history.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 16
+description: Explore the Hîsyêô approach to History, including radial time metaphors, historical methods, and a materialist historiography.
 ---
 
 import Tabs from '@theme/Tabs';
