--- a/docs/sciences/literary-studies.mdx
+++ b/docs/sciences/literary-studies.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 19
+description: Examine Literary Studies in Hîsyêô. Learn about narrative theory, genres, poetic aesthetics, and the process of literary criticism.
 ---
 
 import Tabs from '@theme/Tabs';
