--- a/docs/sciences/philosophy.mdx
+++ b/docs/sciences/philosophy.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 18
+description: Explore philosophical concepts in Hîsyêô, from epistemology and ethics to political philosophy and aesthetics.
 ---
 
 import Tabs from '@theme/Tabs';
