--- a/docs/works/parallel-speech-corpus.mdx
+++ b/docs/works/parallel-speech-corpus.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 5
+description: A corpus of parallel speech texts translated into Hîsyêô for comparing information density with other languages.
 ---
 
 import Tabs from '@theme/Tabs';
