--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 1
+description: A collection of 218 test sentences translated into Hîsyêô to demonstrate various syntactic structures.
 ---
 
 import Tabs from '@theme/Tabs';
