--- a/docs/language/word_types/pronouns.mdx
+++ b/docs/language/word_types/pronouns.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 2
+description: Learn the Hîsyêô pronoun system, including personal, reflexive, demonstrative, and possessive pronouns, as well as indefinites and interrogatives.
 ---
 
 import Tabs from '@theme/Tabs';
