--- a/docs/religion/gods/îfêstôs.mdx
+++ b/docs/religion/gods/îfêstôs.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 4
+description: Meet Îfêstôs, the Hîsyêô god of Labor and Creation. Learn about the dignity of work, craftsmanship, and the power of materials.
 ---
 
 import Tabs from '@theme/Tabs';
