--- a/docs/sciences/introduction.mdx
+++ b/docs/sciences/introduction.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 0
+description: An introduction to scientific terminology in Hîsyêô, outlining the major disciplines and the vocabulary of the scientific method.
 ---
 
 import Tabs from '@theme/Tabs';
