--- a/docs/sciences/medicine.mdx
+++ b/docs/sciences/medicine.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 22
+description: Learn medical terminology in Hîsyêô. Covers anatomy, medical practice, pharmacology, and the philosophy of bodily maintenance.
 ---
 
 import Tabs from '@theme/Tabs';
