--- a/docs/sciences/technology.mdx
+++ b/docs/sciences/technology.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 17
+description: Learn about technology in Hîsyêô culture, emphasizing the 'philosophy of the lever', computing, energy, and the maker ethos.
 ---
 
 import Tabs from '@theme/Tabs';
